Update Sony - WH-CH720N Wireless Noise Canceling Headphones - Black.html

--- a/Sony - WH-CH720N Wireless Noise Canceling Headphones - Black.html
+++ b/Sony - WH-CH720N Wireless Noise Canceling Headphones - Black.html
@@ -296,7 +296,7 @@ Store</a>
 <!-- tab info start -->
 <section id="content4" class="tab-section">
 <div class="tab-list">
-<p>We do all methods including international shipping. After we receive payment and we will upload the tracking information and ship day on or next day depending on time of order. For status on shipment, log in your account to view the tracking.</p>
+<p>We will ship it out on the same day Mon-Fri on orders before 12pm CST for faster delivery to you, instead of waiting till the next day or in two days like other sellers might.</p>
 </div>
 </section>
 <!-- tab info end -->
@@ -304,7 +304,7 @@ Store</a>
 <!-- tab info start -->
 <section id="content5" class="tab-section">
 <div class="tab-list">
-<p>Our 100% Satisfaction Guarantee promises that our products have been tested and fully work. We accept returns after 30 days of purchase. Items just need to be in their original condition and packaging as received and can be returned within 30 days of purchasing. If you have any issues, please give us the opportunity to resolve your concern. If the item is defective, non working, or does not match description, please contact us for an easy return.</p>
+<p>Buy risk-free with 60 day returns.</p>
 </div>
 </section>
 <!-- tab info end -->
