--- a/Sony - WH-CH720N Wireless Noise Canceling Headphones - Black.html
+++ b/Sony - WH-CH720N Wireless Noise Canceling Headphones - Black.html
@@ -110,7 +110,6 @@ Sony - WH-CH720N Wireless Noise Canceling Headphones - Black
 <li>Superior call quality with precise voice pickup</li>
 <li>Wearing detection pauses when headphones are removed</li>
 </ul>
-<p>Relax and get Comfortable as its equipped with a soft over-ear leathery cushion pad that makes it more enjoyable and comfortable for extended listening sessions. With the long battery life.</p>
 </div>
 </span>
 <div class="pt-1 mb-2">
@@ -144,23 +143,36 @@ Store</a>
 <input id="tab2" name="tabs" type="radio">
 <label for="tab2">F.A.Q</label>
 <input id="tab3" name="tabs" type="radio">
-<label for="tab3">Product Description</label>
+<label for="tab3">Features</label>
 <input id="tab4" name="tabs" type="radio">
-<label for="tab4">Shipping</label>
+<label for="tab4">About us</label>
 <input id="tab5" name="tabs" type="radio">
-<label for="tab5">Return</label>
+<label for="tab5">Shipping</label>
+<input id="tab6" name="tabs" type="radio">
+<label for="tab6">Return</label>
 
 <!-- tab info start -->
 <section id="content1" class="tab-section">
 <div class="tab-list">
 <div class="row">
 <div class="col-md-12">
-<h4>Condition</h4>
+<h4>Condition:</h4>
+<p><b>Excellent (Grade A)</b></p>
 <ul>
-<li>Open box</li>
+<li>Minimal signs of wear or use</li>
+<li>Close to its original, brand-new state</li>
+<li>Functions at a high level</li>
 </ul>
+
+<p style="color: red">Relax and get Comfortable as its equipped with a soft over-ear leathery cushion pad that makes it more enjoyable and comfortable for extended listening sessions. With the long battery life.</p>
+
 <h4>Testting process</h4>
-<p>An item in excellent, new condition with no wear. The item may be missing the original packaging or protective wrapping, or may be in the original packaging but not sealed. The item includes original accessories. The item may be a factory second. See the seller's listing for full details and description. </p>
+<ul>
+<li>Thoroughly inspected and tested by our certified technicians.</li>
+<li>Any defective components have been replaced with genuine Sony parts or a third party of the same quality.</li>
+<li>Extensive testing for audio quality, button functionality, and battery performance.</li>
+<li>Professionally cleaned and sanitized.</li>
+</ul>
 <h4>What's in the Box?</h4>
 <ul>
 <li>1x Sony WH-1000XM4</li>
@@ -296,13 +308,23 @@ Store</a>
 <!-- tab info start -->
 <section id="content4" class="tab-section">
 <div class="tab-list">
-<p>We will ship it out on the same day Mon-Fri on orders before 12pm CST for faster delivery to you, instead of waiting till the next day or in two days like other sellers might.</p>
+<p>- Welcome to Levrsage, since 2013 we’ve prevailed in the market on eBay, selling over 5,000 items. Our expertise and unwavering commitment to excellence have given us impressive track record with over 90% positive reviews from our vast customer base. Our dedicated service has earned us the trust of thousands, who appreciate the exceptional value and reliability, we provide. Adversity age, we are breaking down price barriers, offering, curated high quality tech that won’t break the bank. Join us in our road to redefining, affordability, quality, and vibes in the world of tech.</p>
+<h3>What is the Levrsage No-Nonsense Policy?</h3>
+<p>- Our job here is to provide you with the exact headphones you are looking for. Headphones that 100% work & includes the full accessories. We do not believe in shipping headphones that is not authentic or do not work. We make sure each headphone goes through countless tests before they are shipped out by our Inspection Department. If there is any problem please message us and we will do our best to resolve it.</p>
 </div>
 </section>
 <!-- tab info end -->
 
 <!-- tab info start -->
 <section id="content5" class="tab-section">
+<div class="tab-list">
+<p>We will ship it out on the same day Mon-Fri on orders before 12pm CST for faster delivery to you, instead of waiting till the next day or in two days like other sellers might.</p>
+</div>
+</section>
+<!-- tab info end -->
+
+<!-- tab info start -->
+<section id="content6" class="tab-section">
 <div class="tab-list">
 <p>Buy risk-free with 60 day returns.</p>
 </div>
